--- a/public/assets/stylesheets/print.css
+++ b/public/assets/stylesheets/print.css
@@ -262,19 +262,13 @@ td.quote {
 a.link-intern {
   padding-left: 18px;
   background-image: url("../images/icons/blue/link-intern.svg");
-  -webkit-background-size: 16px 16px;
-  -moz-background-size: 16px 16px;
-  -o-background-size: 16px 16px;
-  background-size: 16px 16px;
+  background-size: 16px;
   background-repeat: no-repeat;
 }
 a.link-extern {
   padding-left: 18px;
   background-image: url("../images/icons/blue/link-extern.svg");
-  -webkit-background-size: 16px 16px;
-  -moz-background-size: 16px 16px;
-  -o-background-size: 16px 16px;
-  background-size: 16px 16px;
+  background-size: 16px;
   background-repeat: no-repeat;
 }
 .formatted-content {
