use cropper functionality for courses and institutes, too, re #8346

--- a/public/assets/stylesheets/less/avatar.less
+++ b/public/assets/stylesheets/less/avatar.less
@@ -81,27 +81,28 @@ div#avatar {
     }
 }
 
-form.settings-avatar {
+form.avatar {
     div {
         &#avatar-preview {
+            height: 90%;
             margin-left: auto;
             margin-right: auto;
-            width: 550px;
+            position: relative;
+            width: 90%;
 
             img#new-avatar {
-                max-height: 90%;
-                max-width: 90%;
                 width: 550px;
             }
         }
 
         &#avatar-buttons {
             background-color: @light-gray-color-20;
-            width: 540px;
             margin-left: auto;
             margin-right: auto;
             padding: 5px;
             text-align: center;
+            width: 150px;
         }
+
     }
 }
