--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4542,23 +4542,23 @@ div.avatar-widget div.avatar-overlay p a {
 div#avatar img {
   max-width: 100%;
 }
-form.settings-avatar div#avatar-preview {
+form.avatar div#avatar-preview {
+  height: 90%;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  width: 90%;
+}
+form.avatar div#avatar-preview img#new-avatar {
   width: 550px;
 }
-form.settings-avatar div#avatar-preview img#new-avatar {
-  max-height: 90%;
-  max-width: 90%;
-  width: 550px;
-}
-form.settings-avatar div#avatar-buttons {
+form.avatar div#avatar-buttons {
   background-color: #e2e3e4;
-  width: 540px;
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
   text-align: center;
+  width: 150px;
 }
 a.button,
 button.button {
