show current picture, re #8346

--- a/public/assets/stylesheets/less/avatar.less
+++ b/public/assets/stylesheets/less/avatar.less
@@ -84,14 +84,14 @@ div#avatar {
 form.avatar {
     div {
         &#avatar-preview {
-            height: 90%;
+            height: 250px;
             margin-left: auto;
             margin-right: auto;
-            position: relative;
-            width: 90%;
+            width: 250px;
 
             img#new-avatar {
-                width: 550px;
+                height: 250px;
+                width: 250px;
             }
         }
 
