--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4543,14 +4543,14 @@ div#avatar img {
   max-width: 100%;
 }
 form.avatar div#avatar-preview {
-  height: 90%;
+  height: 250px;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
-  width: 90%;
+  width: 250px;
 }
 form.avatar div#avatar-preview img#new-avatar {
-  width: 550px;
+  height: 250px;
+  width: 250px;
 }
 form.avatar div#avatar-buttons {
   background-color: #e2e3e4;
