repair image-path var, refs #8542

--- a/resources/assets/stylesheets/mixins.less
+++ b/resources/assets/stylesheets/mixins.less
@@ -1,4 +1,4 @@
-@image-path: "../../images";
+@image-path: "../images";
 @icon-path: "@{image-path}/icons/16";
 
 @import (reference) "mixins/colors.less";
