--- a/public/assets/stylesheets/less/studip-selection.less
+++ b/public/assets/stylesheets/less/studip-selection.less
@@ -18,6 +18,7 @@
     }
     li {
         display: inline-block;
+        vertical-align: top;
     }
 
     li:not(.empty-placeholder) {
@@ -93,7 +94,7 @@
                 }
             }
             .studip-selection-label {
-                text-decoration: underline;
+                color: @active-color;
             }
         }
     }
