--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4508,7 +4508,7 @@ div.avatar-widget div.avatar-overlay {
   -moz-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
   transition: opacity 0.5s ease-in-out;
-  background-color: #28497caa;
+  background-color: rgba(40, 73, 124, 0.667);
   opacity: 0;
   height: 260px;
   left: 0;
