--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -310,21 +310,34 @@ div.overdiv {
 .plugin_install { text-align: center; }
 
 .plugin_description {
-    max-height: 15em;
-    overflow: hidden;
-    position: relative;
-
-    p.read_more {
-         position: absolute;
-         bottom: 0;
-         left: 0;
-         width: 100%;
-         text-align: center;
-         margin: 0;
-         padding: 10px 0;
-         background-image: linear-gradient(to bottom, transparent, white)
+    a {
+        display: none;
     }
 }
+
+.plugin_description.short {
+    div {
+        max-height: 15em;
+        overflow: hidden;
+        position: relative;
+
+        p.read_more {
+             position: absolute;
+             bottom: 0;
+             left: 0;
+             width: 100%;
+             height: 4em;
+             margin: 0;
+             background-image: linear-gradient(to bottom, transparent, white)
+         }
+    }
+
+    a {
+        display: inline-block;
+    }
+}
+
+
 
 img.plugin_preview {
     height: 60px;
