fix question box style, re #8483

--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -149,7 +149,7 @@
 
 
 // Confirmation dialog (like createQuestion)
-.ui-dialog.studip-confirmation {
+.ui-dialog.ui-widget.ui-widget-content.studip-confirmation {
     min-width: 30em;
 
     .ui-dialog-titlebar {
@@ -169,13 +169,7 @@
 
     .ui-dialog-content {
         .box-sizing(border-box);
-        .background-icon('question-circle-full', 'status-yellow');
-        background-position: 12px 8px;
-        background-repeat: no-repeat;
-        background-size: 32px 32px;
-        font-weight: bold;
-        padding: 15px 15px 15px 55px;
-        text-align: left;
+        padding: 15px;
         max-height: 60vh;
     }
 
