--- a/public/assets/stylesheets/less/avatar.less
+++ b/public/assets/stylesheets/less/avatar.less
@@ -82,10 +82,6 @@ div#avatar {
 
 form.settings-avatar {
 
-    .form-group {
-        margin-top: 15px;
-    }
-
     .avatar-normal {
         padding: 2em;
         display: block;
@@ -97,7 +93,7 @@ form.settings-avatar {
         .flex-item(1, 1);
         position: absolute;
         left: 320px;
-        top: 50px;
+        top: 65px;
     }
 
     .form-text {
@@ -107,6 +103,12 @@ form.settings-avatar {
     .media-breakpoint-small-up({ .form-group {
         .flex();
         .flex-align-items(center);
+    } });
+
+    .media-breakpoint-small-down({ .file-upload {
+        position: initial;
+        left: 0;
+        top: 0;
     } });
 
     .cropper-container {
@@ -120,7 +122,7 @@ form.settings-avatar {
         position: absolute;
         right: 10px;
         text-align: center;
-        top: 50px;
+        top: 45px;
         width: 28px;
     }
 }
