use color from Stud.IP color scheme, re #8346

--- a/public/assets/stylesheets/less/avatar.less
+++ b/public/assets/stylesheets/less/avatar.less
@@ -114,6 +114,14 @@ form.settings-avatar {
     .cropper-container {
         margin-left: auto;
         margin-right: auto;
+
+        .cropper-view-box {
+            outline: 1px solid @base-color-80;
+        }
+
+        .cropper-line, .cropper-point {
+            background-color: @base-color-80;
+        }
     }
 
     #avatar-buttons {
