--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4587,6 +4587,13 @@ form.settings-avatar .cropper-container {
   margin-left: auto;
   margin-right: auto;
 }
+form.settings-avatar .cropper-container .cropper-view-box {
+  outline: 1px solid #536d96;
+}
+form.settings-avatar .cropper-container .cropper-line,
+form.settings-avatar .cropper-container .cropper-point {
+  background-color: #536d96;
+}
 form.settings-avatar #avatar-buttons {
   padding-left: 5px;
   padding-right: 5px;
