resurrect icon in question box, re #8483

--- a/resources/assets/stylesheets/less/dialog.less
+++ b/resources/assets/stylesheets/less/dialog.less
@@ -169,7 +169,11 @@
 
     .ui-dialog-content {
         .box-sizing(border-box);
-        padding: 15px;
+        .background-icon('question-circle-full', 'status-yellow');
+        background-position: 12px 8px;
+        background-repeat: no-repeat;
+        background-size: 32px;
+        padding: 15px 15px 15px 55px;
         max-height: 60vh;
     }
 
