fixes #8486, use link with icon instead of button for "read more"

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -330,6 +330,19 @@ div.overdiv {
          }
     }
 
+    .read_more_link {
+        .icon('before', 'add', 'clickable');
+
+        &:hover {
+            .icon('before', 'add', 'attention');
+        }
+
+        span {
+            vertical-align: middle;
+            padding-top: 3px;
+        }
+    }
+
     a {
         display: inline-block;
     }
