--- a/resources/assets/stylesheets/less/dialog.less
+++ b/resources/assets/stylesheets/less/dialog.less
@@ -190,7 +190,7 @@
 }
 
 .ui-dialog.studip-lightbox {
-    @arrow-distance: 4px;
+    @arrow-distance: 8px;
     @arrow-size: 32px;
     @arrow-zoom: 16px;
     .wrapper {
@@ -209,7 +209,7 @@
             .transition(opacity 300ms);
             background-repeat: no-repeat;
             display: block;
-            opacity: 0.5;
+            opacity: 0.1;
 
             position: absolute;
             top: 0;
@@ -226,23 +226,61 @@
             left: 0;
             right: 50%;
 
-            .background-icons(
-                'arr_1left', 'clickable', @arrow-size,
-                'arr_1left', 'info_alt', (@arrow-size + @arrow-zoom)
-            );
-            background-position: left unit(@arrow-distance, px) center,
-                                 left unit((@arrow-distance - @arrow-zoom / 2), px) center;
+            .icon('before', 'arr_1left', 'clickable', @arrow-size);
+            &::before {
+                position: absolute;
+                left: @arrow-distance;
+                top: 50%;
+                .translate(0, -50%);
+                z-index: 2;
+            }
+
+            &::after {
+                .square((@arrow-size + @arrow-zoom));
+
+                position: absolute;
+                left: 0;
+                top: 50%;
+                .translate(0, -50%);
+
+                background-color: @white;
+                border-top-right-radius: 25%;
+                border-bottom-right-radius: 25%;
+                content: '';
+                display: block;
+
+                z-index: 1;
+            }
         }
         .next {
             right: 0;
             left: 50%;
 
-            .background-icons(
-                'arr_1right', 'clickable', @arrow-size,
-                'arr_1right', 'info_alt', (@arrow-size + @arrow-zoom)
-            );
-            background-position: right unit(@arrow-distance, px) center,
-                                 right unit((@arrow-distance - @arrow-zoom / 2), px) center;
+            .icon('before', 'arr_1right', 'clickable', @arrow-size);
+            &::before {
+                position: absolute;
+                right: @arrow-distance;
+                top: 50%;
+                .translate(0, -50%);
+                z-index: 2;
+            }
+
+            &::after {
+                .square((@arrow-size + @arrow-zoom));
+
+                position: absolute;
+                right: 0;
+                top: 50%;
+                .translate(0, -50%);
+
+                background-color: @white;
+                border-top-left-radius: 25%;
+                border-bottom-left-radius: 25%;
+                content: '';
+                display: block;
+
+                z-index: 1;
+            }
         }
 
         &.first .previous,
