fix gradient for safarIE, re #8486

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -326,7 +326,7 @@ div.overdiv {
              width: 100%;
              height: 4em;
              margin: 0;
-             background-image: linear-gradient(to bottom, transparent, white)
+             background-image: linear-gradient(to bottom, fadeout(@white, 100%), @white)
          }
     }
 
