refs #7036, use pre-wrap instead of pre-line

--- a/resources/assets/stylesheets/less/content.less
+++ b/resources/assets/stylesheets/less/content.less
@@ -43,7 +43,7 @@
     display: inline;
 
     pre {   // pre-formatted content breaks the Stud.IP Layout!
-        white-space: pre-line;
+        white-space: pre-wrap;
     }
 }
 
