#8739 changed action-icon to correct action-menu-icon, mobile-sidebar deprecated

--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -141,7 +141,7 @@
 
     // Icon file fallback for old browsers
     html:not(.csstransforms) & .action-menu-icon {
-        .background-icon('mobile-sidebar', 'clickable', @icon-size);
+        .background-icon('action', 'clickable', @icon-size);
 
         div {
             display: none;
