--- a/resources/assets/stylesheets/wysiwyg.css
+++ b/resources/assets/stylesheets/wysiwyg.css
@@ -17,6 +17,12 @@
     -moz-transition: height 0.2s;
     transition: height 0.2s;
 }
+
+/* override inherited font-weight of label */
+.cke {
+    font-weight: normal;
+}
+
 .cktoolbar {                        /* toolbar */
     padding: 0;
     margin: 0;
