--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -423,3 +423,10 @@ table.hide_datafield_title {
     font-size: 1.4em;
     text-align: left;
 }
+
+@media (max-width: 580px) {
+    .ms-selectable,
+    .ms-selection {
+        width: 100% ! important;
+    }
+}
