--- a/resources/assets/stylesheets/wysiwyg.css
+++ b/resources/assets/stylesheets/wysiwyg.css
@@ -21,6 +21,7 @@
 /* override inherited font-weight of label */
 .cke {
     font-weight: normal;
+    text-indent: 0;
 }
 
 .cktoolbar {                        /* toolbar */
