--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -23,7 +23,7 @@
         top: -4px;
         right: -4px;
 
-        padding: 4px 28px 4px 8px;
+        padding: 4px 8px;
         z-index: 2;
 
         background: white;
@@ -47,6 +47,7 @@
         padding: 3px 0;
         a {
             padding-left: 0;
+            display: block;
 
             &[disabled] {
                 color: @dark-gray-color-80;
@@ -55,6 +56,9 @@
 
         img, svg, .action-menu-no-icon, input[type="image"] {
             margin: 0 0.25em;
+            .square(@icon-size);
+            display: inline-block;
+            vertical-align: bottom;
         }
         > label {
             color: @base-color;
@@ -63,12 +67,6 @@
                 color: @active-color;
             }
         }
-    }
-
-    .action-menu-item img, .action-menu-item svg, .action-menu-no-icon, .action-menu-item input[type="image"] {
-        .square(@icon-size);
-        display: inline-block;
-        vertical-align: bottom;
     }
 
     &:not(.active) {
