use padding instead of margin, fixes #8803

--- a/resources/assets/stylesheets/less/header.less
+++ b/resources/assets/stylesheets/less/header.less
@@ -80,7 +80,7 @@
         position: relative;
         float: right;
         z-index: 1;
-        margin: 7px 8px;
+        padding: 7px 8px;
         cursor: pointer;
     }
 }
